# Sqlite3WithC-Assignment

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
Calculator-test/: CMakeLists.txt  calculatorClass.h  unit_test.cpp
Calculator-test/src/: unit_test.cpp
CalculatorClass/: Calculator.h
CalculatorDatabase/: calculator.db  sample.txt
CalculatorDbModel/: CalculatorModel.h
src/: main.cpp
